<resources>
    <string name="app_name">Android_Photos</string>
    <string name ="homeTitle">Albums</string>
    <string name ="albumNameField">Enter Album Name</string>
    <string name="enter_album_name">Enter album name</string>
    <string name="create_album">Create Album</string>
    <string name="delete_album">Delete Album</string>
    <string name="open_album">Open Album</string>
    <string name="rename_album">Rename Album</string>
    <string name="albums">Albums</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="album_view">Album View</string>
    <string name="placeholder_description" />
    <string name="image">Image</string>
    <string name="open">Open</string>
    <string name="select_tag_name">Select Tag Name</string>
    <string name="enter_tag_value">Enter Tag Value</string>
    <string name="move">Move</string>

    //Alerts

    //Messages
</resources>