<!-- res/layout/activity_album_view.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".AlbumViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textViewAlbumView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album_view"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backButton"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/back" />

            <LinearLayout
                android:layout_width="118dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/delete" />

                <Button
                    android:id="@+id/addButton"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/add" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/openButton"
                    android:layout_width="114dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/open" />

                <Button
                    android:id="@+id/searchButton"
                    android:layout_width="114dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/search" />

            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/pictureRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</RelativeLayout>